[project]
name = "deepagents-fileserver"
version = "0.1.0"
description = "Independent HTTP file server exposing BackendProtocol operations from DeepAgents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["fileserver*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"*" = ["py.typed", "*.md"]
